# bot_server

./: README.txt  TODO.txt  board_info.py  client_launcher.py  game_config.py  guard_runner.py  guards_launcher.py  guards_manager_launcher.py  index.html  params.json  pyproject.toml  requirements.txt  server_launcher.py
client/: client_factory.py  client_protocol.py  game_client.py  guard_manager.py  guard_runner.py
common/: game_board.py  game_participants.py  game_session.py  game_utils.py  utils.py
game/: board_blocks.py  cell_types.py  game_board.py  game_participants.py  game_session.py  game_utils.py  move_types.py
server/: admin_manager.py  game_server.py  guard_manager.py  guard_manager_server.py  server_factory.py  server_protocol.py  web_server.py
static/js/: admin.js  app.js  reg.js
templates/: admin.html  index.html  reg.html
utils/: configure_logging.py  map_generation.py
version2/: main.py
version2/routers/: web_sockets.py
version2/static/js/: app.js
version2/templates/: index.html
