[tool.poetry]
name = "bot_server"
version = "0.1.0"
description = ""
authors = ["Oleksandr Klymenko <oklymenko@softserveinc.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
Jinja2 = "^3.1.2"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
